update theme and highliting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- LOCAL -->
     <link rel="stylesheet" href="node_modules/office-ui-fabric-js/dist/css/fabric.min.css" />
     <link rel="stylesheet" href="node_modules/office-ui-fabric-js/dist/css/fabric.components.css" />
+    <!--<link rel="stylesheet" href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" />-->
 
     <!-- CDN -->
     <!-- For the Office UI Fabric, go to http://aka.ms/office-ui-fabric to learn more. -->
