--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Office Add-in</title>
+    <title>#LetsContract plugin</title>
     <script src="http://192.168.1.7:1337/vorlon.js"></script>
 
     <!-- Office JavaScript API -->
